<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip"
    >
  	<RelativeLayout
  		android:id="@+id/RelativeLayout01"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
	    <EditText
			android:text="@string/ip_text"
			android:id="@+id/IPText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<EditText
			android:text="@string/port_text"
			android:id="@+id/PortText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/IPText"
			/>
  	</RelativeLayout>

	<Button
		android:text="@string/open_communication" 
		android:id="@+id/OpenComm" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>

	<Button
		android:text="@string/close_communication" 
		android:id="@+id/CloseComm" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		/>
		
	<TextView
		android:text="@string/debug"
		android:textStyle="bold"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/Debug"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		/>
  	<RelativeLayout
  		android:id="@+id/RelativeLayout02"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
		<TextView
			android:text="@string/x_title"
			android:id="@+id/XTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/x_value"
			android:id="@+id/XValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/XTitle"
			/>
	</RelativeLayout>
  	<RelativeLayout
  		android:id="@+id/RelativeLayout03"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
		<TextView
			android:text="@string/y_title"
			android:id="@+id/YTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/y_value"
			android:id="@+id/YValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/YTitle"
			/>
	</RelativeLayout>
  	<RelativeLayout
  		android:id="@+id/RelativeLayout04"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
		<TextView
			android:text="@string/z_title"
			android:id="@+id/ZTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>
		<TextView
			android:text="@string/z_value"
			android:id="@+id/ZValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/ZTitle"
			/>
	</RelativeLayout>
</LinearLayout>
